--- a/public/404.html
+++ b/public/404.html
@@ -9,13 +9,13 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://127.0.0.1:5500/404.html">
+<link rel="canonical" href="http://byteoff.nl/404.html">
 <link crossorigin="anonymous" href="./assets/css/stylesheet.9329d037bc79464b26647fb72e079cd738f5d2418b1df4da3b515db9e22cb4d9.css" integrity="sha256-kynQN7x5RksmZH&#43;3Lgec1zj10kGLHfTaO1FdueIstNk=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://127.0.0.1:5500/favicons/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://127.0.0.1:5500/favicons/favicon-16x16png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://127.0.0.1:5500/favicons/favicon-21x32.png">
-<link rel="apple-touch-icon" href="http://127.0.0.1:5500/favicons/apple-touch-icon.png">
-<link rel="mask-icon" href="http://127.0.0.1:5500/favicons/safari-pinned-tab.svg">
+<link rel="icon" href="http://byteoff.nl/favicons/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="http://byteoff.nl/favicons/favicon-16x16png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://byteoff.nl/favicons/favicon-21x32.png">
+<link rel="apple-touch-icon" href="http://byteoff.nl/favicons/apple-touch-icon.png">
+<link rel="mask-icon" href="http://byteoff.nl/favicons/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <script src="https://kit.fontawesome.com/297942256a.js" crossorigin="anonymous"></script>
@@ -59,7 +59,7 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://127.0.0.1:5500/404.html" />
+<meta property="og:url" content="http://byteoff.nl/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -82,7 +82,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://127.0.0.1:5500/" accesskey="h" title="ByteOff (Alt + H)">ByteOff</a>
+            <a href="http://byteoff.nl/" accesskey="h" title="ByteOff (Alt + H)">ByteOff</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -108,22 +108,22 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://127.0.0.1:5500/podcast/" title="Podcast">
+                <a href="http://byteoff.nl/podcast/" title="Podcast">
                     <span>Podcast</span>
                 </a>
             </li>
             <li>
-                <a href="http://127.0.0.1:5500/archives/" title="Archief">
+                <a href="http://byteoff.nl/archives/" title="Archief">
                     <span>Archief</span>
                 </a>
             </li>
             <li>
-                <a href="http://127.0.0.1:5500/search/" title="Zoeken (Alt &#43; /)" accesskey=/>
+                <a href="http://byteoff.nl/search/" title="Zoeken (Alt &#43; /)" accesskey=/>
                     <span>Zoeken</span>
                 </a>
             </li>
             <li>
-                <a href="http://127.0.0.1:5500/v4v/" title="v4v">
+                <a href="http://byteoff.nl/v4v/" title="v4v">
                     <span>v4v</span>
                 </a>
             </li>
@@ -135,7 +135,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="http://127.0.0.1:5500/">ByteOff</a></span>
+    <span>&copy; 2023 <a href="http://byteoff.nl/">ByteOff</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
