--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://byteoff.github.io/404.html">
-<link crossorigin="anonymous" href="./assets/css/stylesheet.9329d037bc79464b26647fb72e079cd738f5d2418b1df4da3b515db9e22cb4d9.css" integrity="sha256-kynQN7x5RksmZH&#43;3Lgec1zj10kGLHfTaO1FdueIstNk=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.9329d037bc79464b26647fb72e079cd738f5d2418b1df4da3b515db9e22cb4d9.css" integrity="sha256-kynQN7x5RksmZH&#43;3Lgec1zj10kGLHfTaO1FdueIstNk=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://byteoff.github.io/favicons/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://byteoff.github.io/favicons/favicon-16x16png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://byteoff.github.io/favicons/favicon-21x32.png">
