--- a/public/podcast/index.html
+++ b/public/podcast/index.html
@@ -13,8 +13,8 @@ Ontdek de Kracht van RSS Wij geloven sterk in de eenvoud van RSS voor iedereen d
 Luister naar onze podcast doormiddel van de volgende RSS-link:">
 <meta name="author" content="">
 <link rel="canonical" href="https://byteoff.github.io/podcast/">
-<link crossorigin="anonymous" href="../assets/css/stylesheet.9329d037bc79464b26647fb72e079cd738f5d2418b1df4da3b515db9e22cb4d9.css" integrity="sha256-kynQN7x5RksmZH&#43;3Lgec1zj10kGLHfTaO1FdueIstNk=" rel="preload stylesheet" as="style">
-<script defer crossorigin="anonymous" src="../assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js" integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG&#43;9vmJ0cTS&#43;ovo0FeA="
+<link crossorigin="anonymous" href="/assets/css/stylesheet.9329d037bc79464b26647fb72e079cd738f5d2418b1df4da3b515db9e22cb4d9.css" integrity="sha256-kynQN7x5RksmZH&#43;3Lgec1zj10kGLHfTaO1FdueIstNk=" rel="preload stylesheet" as="style">
+<script defer crossorigin="anonymous" src="/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js" integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG&#43;9vmJ0cTS&#43;ovo0FeA="
     onload="hljs.initHighlightingOnLoad();"></script>
 <link rel="icon" href="https://byteoff.github.io/favicons/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://byteoff.github.io/favicons/favicon-16x16png">
