--- a/public/404.html
+++ b/public/404.html
@@ -123,8 +123,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://byteoff.github.io/v4v/" title="v4v">
-                    <span>v4v</span>
+                <a href="https://byteoff.github.io/v4v/" title="V4V">
+                    <span>V4V</span>
                 </a>
             </li>
         </ul>
