--- a/public/podcast/index.html
+++ b/public/podcast/index.html
@@ -180,8 +180,8 @@ Luister naar onze podcast doormiddel van de volgende RSS-link:"/>
                 </a>
             </li>
             <li>
-                <a href="https://byteoff.github.io/v4v/" title="v4v">
-                    <span>v4v</span>
+                <a href="https://byteoff.github.io/v4v/" title="V4V">
+                    <span>V4V</span>
                 </a>
             </li>
         </ul>
