--- a/public/v4v/index.html
+++ b/public/v4v/index.html
@@ -171,8 +171,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://byteoff.github.io/v4v/" title="v4v">
-                    <span class="active">v4v</span>
+                <a href="https://byteoff.github.io/v4v/" title="V4V">
+                    <span class="active">V4V</span>
                 </a>
             </li>
         </ul>
